--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,43 @@
+.box {
+    background: black;
+    height: 300px;
+    width: 100px;
+    margin: auto;
+    margin-top: 30px;
+}
 
-/* 
+.Light {
+    height: 75px;
+    width: 75px;
+    border-radius: 50%;
+    margin: 13px;
+    margin-top: 5px;
+    align-items: center;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.light-red {
+    background: red;
+}
+.light-yellow {
+    background: yellow;
+}
+.light-green {
+    background: green;
+}
 
-*/
+.glow-red {
+    box-shadow: 0px 0px 9px 4px red;
+    animation: glow 0.8s linear infinite alternate;
+}
+.glow-yellow {
+        box-shadow: 0px 0px 9px 4px yellow;
+        animation: glow 0.8s linear infinite alternate;
+}
+.glow-green {
+            box-shadow: 0px 0px 9px 4px green;
+            animation: glow 0.8s linear infinite alternate
+}
+@keyframes glow {
+    to {
+        box-shadow: 0px 0px 30px 20px yellowgreen;
+    }}
